final report re-pushed

--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -257,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define our alpha for 95% confidence\n",
+    "# Define our alpha for 95% confidence!\n",
     "alpha = 0.05"
    ]
   },
