--- a/Final_Report.ipynb
+++ b/Final_Report.ipynb
@@ -244,7 +244,6 @@
    "source": [
     "<hr style=\"border:2px solid blue\"> </hr>\n",
     "\n",
-    "<img src=\"Images/explore.gif\" alt=\"Exploring Features\" title=\"Exploring Features\" width=\"300\" height=\"100\" align=\"right\">\n",
     "\n",
     "# Explore\n",
     "The target variable will be logerror. Since we do not know the Zestimate of the home, nor the price it truely sold for, we only have the logerror as a reference for Zestimate error. So that is what we will explore."
@@ -664,7 +663,6 @@
     "\n",
     "\n",
     "\n",
-    "<img src=\"Images/machine_learning.gif\" alt=\"Machine Learning\" title=\"Machine Learning\" width=\"300\" height=\"100\" align=\"right\">\n",
     "\n",
     "# Modeling\n",
     "\n",
@@ -831,7 +829,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -845,7 +843,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
